crates/lowerer/tests/snapshots/upstream_parser_policy__member7.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: root
---
policies 0..87
╰─ policy 0..87
   ├─ permit 0..6
   ├─ whitespace 6..7
   ├─ scope 7..37
   │  ├─ ( 7..8
   │  ├─ variable definition 8..17
   │  │  ╰─ principal 8..17
   │  ├─ , 17..18
   │  ├─ whitespace 18..19
   │  ├─ variable definition 19..25
   │  │  ╰─ action 19..25
   │  ├─ , 25..26
   │  ├─ whitespace 26..27
   │  ├─ variable definition 27..35
   │  │  ╰─ resource 27..35
   │  ├─ ) 35..36
   │  ╰─ whitespace 36..37
   ├─ condition 37..85
   │  ├─ when 37..41
   │  ├─ whitespace 41..42
   │  ├─ { 42..43
   │  ├─ whitespace 43..48
   │  ├─ name 48..52
   │  │  ├─ identifier 48..51
   │  │  ╰─ whitespace 51..52
   │  ├─ error 52..84
   │  │  ├─ { 52..53
   │  │  ├─ whitespace 53..54
   │  │  ├─ identifier 54..57
   │  │  ├─ : 57..58
   │  │  ├─ whitespace 58..59
   │  │  ├─ true 59..63
   │  │  ├─ , 63..64
   │  │  ├─ whitespace 64..65
   │  │  ├─ identifier 65..71
   │  │  ├─ : 71..72
   │  │  ├─ whitespace 72..73
   │  │  ├─ string 73..81
   │  │  ├─ whitespace 81..82
   │  │  ├─ } 82..83
   │  │  ╰─ whitespace 83..84
   │  ╰─ } 84..85
   ├─ ; 85..86
   ╰─ whitespace 86..87
