crates/lowerer/tests/snapshots/upstream_parser_policy__member7_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ member7:3:9
  │
3 │     one { num: true, trivia: "first!" }
  ╰╴        ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
error: unknown variable `one`
  ╭▸ member7:3:5
  │
3 │     one { num: true, trivia: "first!" }
  │     ━━━━
  ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
