crates/lowerer/tests/snapshots/upstream_parser_policy__member7_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 87)
└─Policy [0, 87)
  ├─PermitKeyword "permit" [0, 6)
  ├─Whitespace " " [6, 7)
  ├─OpenParenthesis "(" [7, 8)
  ├─VariableDefinition [8, 17)
  │ └─PrincipalKeyword "principal" [8, 17)
  ├─Comma "," [17, 18)
  ├─Whitespace " " [18, 19)
  ├─VariableDefinition [19, 25)
  │ └─ActionKeyword "action" [19, 25)
  ├─Comma "," [25, 26)
  ├─Whitespace " " [26, 27)
  ├─VariableDefinition [27, 35)
  │ └─ResourceKeyword "resource" [27, 35)
  ├─CloseParenthesis ")" [35, 36)
  ├─Whitespace "\n" [36, 37)
  ├─Condition [37, 85)
  │ ├─WhenKeyword "when" [37, 41)
  │ ├─Whitespace " " [41, 42)
  │ ├─OpenBrace "{" [42, 43)
  │ ├─Whitespace "\n    " [43, 48)
  │ ├─Name [48, 52)
  │ │ ├─Identifier "one" [48, 51)
  │ │ └─Whitespace " " [51, 52)
  │ ├─Error [52, 84)
  │ │ ├─OpenBrace "{" [52, 53)
  │ │ ├─Whitespace " " [53, 54)
  │ │ ├─Identifier "num" [54, 57)
  │ │ ├─Colon ":" [57, 58)
  │ │ ├─Whitespace " " [58, 59)
  │ │ ├─TrueKeyword "true" [59, 63)
  │ │ ├─Comma "," [63, 64)
  │ │ ├─Whitespace " " [64, 65)
  │ │ ├─Identifier "trivia" [65, 71)
  │ │ ├─Colon ":" [71, 72)
  │ │ ├─Whitespace " " [72, 73)
  │ │ ├─String "\"first!\"" [73, 81)
  │ │ ├─Whitespace " " [81, 82)
  │ │ ├─CloseBrace "}" [82, 83)
  │ │ └─Whitespace "\n" [83, 84)
  │ └─CloseBrace "}" [84, 85)
  ├─Semicolon ";" [85, 86)
  └─Whitespace "\n" [86, 87)
