crates/lowerer/tests/snapshots/upstream_parser_policy__member8_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ member8:3:6
  │
3 │     {2: true, 4: me}.with["pizza"]
  ╰╴     ━━━━━━━ unexpected token
error: unexpected token
  ╭▸ member8:3:15
  │
3 │     {2: true, 4: me}.with["pizza"]
  ╰╴              ━━━━━ unexpected token
error: indexing is not supported
  ╭▸ member8:3:26
  │
3 │       {2: true, 4: me}.with["pizza"]
  │ ┏━━━━━━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  │ ┗━┛ not supported
  ╰╴
note: use `has` and `.` instead
