crates/lowerer/tests/snapshots/upstream_parser_policy__member9_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..87
└─Policy 0..87
  ├─PermitKeyword "permit" 0..6
  ├─Whitespace " " 6..7
  ├─Scope 7..37
  │ ├─OpenParenthesis "(" 7..8
  │ ├─VariableDefinition 8..17
  │ │ └─PrincipalKeyword "principal" 8..17
  │ ├─Comma "," 17..18
  │ ├─Whitespace " " 18..19
  │ ├─VariableDefinition 19..25
  │ │ └─ActionKeyword "action" 19..25
  │ ├─Comma "," 25..26
  │ ├─Whitespace " " 26..27
  │ ├─VariableDefinition 27..35
  │ │ └─ResourceKeyword "resource" 27..35
  │ ├─CloseParenthesis ")" 35..36
  │ └─Newline "\n" 36..37
  ├─Condition 37..85
  │ ├─WhenKeyword "when" 37..41
  │ ├─Whitespace " " 41..42
  │ ├─OpenBrace "{" 42..43
  │ ├─Newline "\n" 43..44
  │ ├─Whitespace "    " 44..48
  │ ├─MemberExpression 48..84
  │ │ ├─Name 48..56
  │ │ │ └─Identifier "AllRects" 48..56
  │ │ └─Call 56..84
  │ │   ├─OpenParenthesis "(" 56..57
  │ │   ├─Arguments 57..82
  │ │   │ └─Record 57..82
  │ │   │   ├─OpenBrace "{" 57..58
  │ │   │   ├─RecordEntry 58..64
  │ │   │   │ ├─Identifier "two" 58..61
  │ │   │   │ ├─Colon ":" 61..62
  │ │   │   │ ├─Whitespace " " 62..63
  │ │   │   │ └─Literal 63..64
  │ │   │   │   └─Integer "2" 63..64
  │ │   │   ├─Comma "," 64..65
  │ │   │   ├─Whitespace " " 65..66
  │ │   │   ├─RecordEntry 66..81
  │ │   │   │ ├─Identifier "four" 66..70
  │ │   │   │ ├─Colon ":" 70..71
  │ │   │   │ ├─Whitespace " " 71..72
  │ │   │   │ ├─SumExpression 72..78
  │ │   │   │ │ ├─Literal 72..74
  │ │   │   │ │ │ ├─Integer "3" 72..73
  │ │   │   │ │ │ └─Whitespace " " 73..74
  │ │   │   │ │ ├─Add "+" 74..75
  │ │   │   │ │ ├─Whitespace " " 75..76
  │ │   │   │ │ └─Literal 76..78
  │ │   │   │ │   ├─Integer "5" 76..77
  │ │   │   │ │   └─Whitespace " " 77..78
  │ │   │   │ └─Error 78..81
  │ │   │   │   ├─Unknown "/" 78..79
  │ │   │   │   ├─Whitespace " " 79..80
  │ │   │   │   └─Integer "5" 80..81
  │ │   │   └─CloseBrace "}" 81..82
  │ │   ├─CloseParenthesis ")" 82..83
  │ │   └─Newline "\n" 83..84
  │ └─CloseBrace "}" 84..85
  ├─Semicolon ";" 85..86
  └─Newline "\n" 86..87
