crates/lowerer/tests/snapshots/upstream_parser_policy__no_comments_policy4.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ test:1:9
  │
1 │ permit (principal, action, resource, context)
  ╰╴        ━━━━━━━━━ expected `)`
error: missing policy effect
  ╭▸ test:1:38
  │
1 │   permit (principal, action, resource, context)
  │ ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
2 │ ┃ when {
3 │ ┃     context.contains(3, "four", five(6, 7))
4 │ ┃ };
  ╰╴┗━━━┛ expected `permit` or `forbid`
