crates/lowerer/tests/snapshots/upstream_parser_policy__no_comments_policy4_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ no_comments_policy4:1:38
  │
1 │ permit (principal, action, resource, context)
  ╰╴                                     ━━━━━━━ expected `)`
error: expected `;`
  ╭▸ no_comments_policy4:1:38
  │
1 │ permit (principal, action, resource, context)
  ╰╴                                     ━━━━━━━ expected `;`
error: unexpected token
  ╭▸ no_comments_policy4:1:38
  │
1 │   permit (principal, action, resource, context)
  │ ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
2 │ ┃ when {
3 │ ┃     context.contains(3, "four", five(6, 7))
4 │ ┃ };
  ╰╴┗━━━┛ unexpected token
error: expected `permit`
  ╭▸ no_comments_policy4:4:4
  │
4 │ };
  ╰╴  ━ expected `permit`
error: expected `;`
  ╭▸ no_comments_policy4:4:4
  │
4 │ };
  ╰╴  ━ expected `;`
